# rank-cpp-experiments

./: .clang-tidy  CMakeLists.txt  README.md  interface.py
cmake/: CompilerWarnings.cmake  StdProjectSettings.cmake
src/: CMakeLists.txt  CPA.hpp  IO.hpp  rank.cpp  simulate-cpa.cpp
